--- a/0.html
+++ b/0.html
@@ -36,6 +36,9 @@
             </span>
         </div>
         <div style='clear:both;'></div>
-        <div id="Footer">作者：張凱風 李浩綸</div>
+        <div id="Footer">
+			作者：張凱風 李浩綸
+			<li><a href="分工.html">分工網址</a></li>
+		</div>
     </body>
 </html>
