--- a/0.html
+++ b/0.html
@@ -37,8 +37,8 @@
         </div>
         <div style='clear:both;'></div>
         <div id="Footer">
-			作者：張凱風 李浩綸
-			<li><a href="分工.html">分工網址</a></li>
+			作者：張凱風 李浩綸.
+			<a href="分工.html">分工網址</a>
 		</div>
     </body>
 </html>
